apigateway/kube-manifests/01-Api-Gateway-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: fsbvparg.azurecr.io/api-gateway:latest
          ports:
            - containerPort: 8765

   # Requests & Limits   
          resources:
            requests:
              cpu: "200m" 
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "512Mi"
