apigateway/kube-manifests/03-Api-Gateway-ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 8765
      targetPort: 8765
