apigateway/kube-manifests/02-Api-Gateway-Ingress-Context-Path.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt  
spec:
 tls:
  - hosts:
    - apigwaks.smartsystems.cloud
    secretName: api-smartsystems-secret
 rules:
    - host: apigwaks.smartsystems.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: 
                  number: 8765
          - path: /multibecas
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: 
                  number: 8765
          - path: /formulario-service
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: 
                  number: 8765 
          - path: /security
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: 
                  number: 8765     
          - path: /evaluation
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: 
                  number: 8765    
                  
          - path: /file-generator
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: 
                  number: 8765  
          - path: /batch-process
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: 
                  number: 8765
